--- a/aesruby.vcproj
+++ b/aesruby.vcproj
@@ -228,7 +228,15 @@
 				RelativePath=".\ext\brg_types.h"
 				>
 			</File>
+			<File
+				RelativePath=".\ext\extconf.rb"
+				>
+			</File>
 		</Filter>
+		<File
+			RelativePath=".\ext\README.txt"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
