add AES/Ruby README.txt

--- a/aesruby.vcproj
+++ b/aesruby.vcproj
@@ -234,7 +234,7 @@
 			</File>
 		</Filter>
 		<File
-			RelativePath=".\ext\README.txt"
+			RelativePath=".\README.txt"
 			>
 		</File>
 	</Files>
